# mbackup

./: .gitignore  LICENSE  README.md  README.rst  TODO.md  cmdline.py  config.py  ctrl.py  db.py  mbackup  mbackup-list  mbackup.db  mbackup.py  mbackup.sh  mbackupdb.py  mbackupmodules.py  pyproject.toml  setup.py  testlist
backupapps/: __init__.py  backupapp.py  rdiffbackup.py  rsyncbackup.py
ctrl/: BackupCtrl.py  BaseCtrl.py  Group.py  GroupCtrl.py  SettingsCtrl.py  __init__.py
db/: BackupGroups.py  BackupGroupsDb.py  BackupsDb.py  SettingsDb.py  __init__.py  schema.sql
db/changescripts/: mbackup-0.0.1-0.0.2.sql  mbackup-0.0.1.sql  mbackup-0.0.2-0.0.3.sql  mbackup-0.0.3-0.0.4.sql  mbackup-0.0.4-0.0.5.sql  mbackup-0.0.5-0.0.6.sql
docs/: DEVELOPMENT.md  Makefile  TROUBLESHOOTING.md
docs/source/: conf.py  index.rst  mbackup.rst  mbackuplib.rst  modules.rst
keys/: rdiffbackup
mbackup/: backupapperror.py  rdiffbackup.py
mbackuplib/: __init__.py  _version.py  cli.py  mbackup.py  mbackuperror.py  rdiffbackup.py  rsyncbackup.py
mod/: BackupGroup.py  BackupGroupMod.py  BackupMod.py  BaseMod.py  backupgroup.py
resources/: flash.py  rdiffbackup.py  ssh.py
tests/: test_backups.py  test_cli.py
view/: __init__.py
view/text/: BackupView.py  BaseView.py  GroupView.py  SettingsView.py  _BaseView.py
